--- a/heelingminds/templates/index.html
+++ b/heelingminds/templates/index.html
@@ -4,7 +4,7 @@
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mount Monks</title>
+<title>Heeling Minds</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -50,7 +50,7 @@
   <div class="row">
       
       <div class=" chooseus">
-        <img src="{% static './images/binoculars.png'%}" class="binoculars">
+        
          <h2 class="chooseushead">
         About us
 
@@ -79,7 +79,7 @@ work towards their goals of building a ‘life worth living.
       </div> 
     
       <div class=" chooseusmount">
-          <img src="{% static './images/image.png'%}" class="chooseusimg">
+          <img src="{% static './images/therapist.jpg'%}" class="chooseusimg">
       </div>
 
   </div>
@@ -96,7 +96,7 @@ work towards their goals of building a ‘life worth living.
       Contact us!
     </h2>
     <div class="container">  
-      <form id="contact" action="" method="post">
+      <form id="contact"  method="post">
         
         <fieldset>
           <input placeholder="Organisation name" type="text" tabindex="1" required autofocus>
@@ -133,6 +133,44 @@ work towards their goals of building a ‘life worth living.
 
  
 </section>
+<section>
+ 
+    <div class="section-heading2">
+      <h2 class="blogs"> Blogs</h2>
+  </div> <div class="container2">
+    <div class="square">
+      <img class="img" src="{% static './images/anxiety.jpg'%}" class="mask">
+   <div class="h1">Dealing with anxiety and stress</div>
+      
+      
+   <div><a href="https://medium.com/@laheshk/is-apple-a-design-company-f5c83514e261" target="_" class="button">Read More</a></div>
+    </div>
+    <div class="square">
+      <img class="img" src="{% static './images/therapy.png'%}" class="mask">
+   <div class="h1">Why You Must Take Online Therapy </div>
+      
+      
+   <div><a href="https://medium.com/@laheshk/is-apple-a-design-company-f5c83514e261" target="_" class="button">Read More</a></div>
+    </div>
+    <div class="square">
+      <img class="img" src="{% static './images/news.jpg'%}" class="mask">
+   <div class="h1">Impact of watching news channels covering War 24x7</div>
+      
+      
+   <div><a href="https://medium.com/@laheshk/is-apple-a-design-company-f5c83514e261" target="_" class="button">Read More</a></div>
+    </div>
+    
+    
+    
+    </div>
+    
+      
+    
+    
+  </div>
+  
+  
+</section>
 <!-- reviews -->
 <section class="reviews">
   <div class="section-heading2">
@@ -150,9 +188,7 @@ work towards their goals of building a ‘life worth living.
                      <i class="fa fa-quote-right"></i>
                    </div>
                    <div class="testimonial_box-text">
-                     <p>LTherapy with Felicity gave me a new lease on life. I was at the point of ending things & within
-                      21 days, I felt like I got my life back. I am so grateful for the timely help and unconditional support
-                      from Felicity.
+                     <p>Therapy with Felicity gave me a new lease on life. I was at the point of ending things & within
                       </p>
                    </div>
                    
@@ -195,7 +231,7 @@ work towards their goals of building a ‘life worth living.
                     <i class="fa fa-quote-right"></i>
                   </div>
                   <div class="testimonial_box-text">
-                    <p>21 days, I felt like I got my life back. I am so grateful for the timely help and unconditional support</p>
+                    <p>Therapy with Felicity gave me a new lease on life. I was at the point of ending things & within</p>
                   </div>
                   
                  <div class="testimonial_box-name">
@@ -216,7 +252,7 @@ work towards their goals of building a ‘life worth living.
                     <i class="fa fa-quote-right"></i>
                   </div>
                   <div class="testimonial_box-text">
-                    <p>from Felicity.</p>
+                    <p>Therapy with Felicity gave me a new lease on life. I was at the point of ending things & within</p>
                   </div>
                   
                  <div class="testimonial_box-name">
@@ -235,30 +271,7 @@ work towards their goals of building a ‘life worth living.
     </div>
 </section>
 <footer class="footer theme-bg-primary wow fadeInLeft " id="foot">
-  <div class="container py-5 mb-3 col-md-offset-2">
-   <div class="row" style="margin-left: 20px">
-     <div class="footer-col col-lg-3 about-us">
-       <h4 class="col-heading">About us
-       </h4>
-       <p class="about-us-para">
-         Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-       </p>
-       
- 
-    
-     
-   
-         
-      
-   
-         
-       </ul>
- 
-     </div>
- 
-   </div>
- 
-   </div>
+  
   
    
 
@@ -279,6 +292,12 @@ integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QV
 crossorigin="anonymous"
 referrerpolicy="no-referrer"
 ></script>	
+<script>
+  $(document).ready(function(){
+     $(window).scrollTop(0);
+ });
+ </script>
+ 
 <script>
 $(document).ready(function() {
 // Toggle menu on click
