--- a/heelingminds/templates/therapy.html
+++ b/heelingminds/templates/therapy.html
@@ -4,7 +4,7 @@
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mount Monks</title>
+<title>Heeling Minds</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -43,13 +43,26 @@
     <form id="contact" action="" method="post">
       
         <fieldset>
-            <input placeholder="Organisation name" type="text" tabindex="1" required autofocus>
+            <input placeholder="Name" type="text" tabindex="1" required autofocus>
           </fieldset>
           <fieldset>
-            <input placeholder="Organisation Email Address" type="email" tabindex="2" required>
+            <input placeholder=" Email Address" type="email" tabindex="2" required>
           </fieldset>
           <fieldset>
-            <input placeholder="Organisation Phone Number (optional)" type="tel" tabindex="3" required>
+            <input placeholder=" Date of Birth" type="email" tabindex="2" required>
+          </fieldset>
+          <fieldset>
+            <input placeholder="Phone number" type="tel" tabindex="3" required>
+          </fieldset>
+          <fieldset>
+            <select name="cars" id="cars"  >
+              
+              <option value="Male">Male</option>
+              <option value="Male">Female</option>
+              <option value="Male">Others</option>
+              
+              
+            </select>
           </fieldset>
           <fieldset>
             <select name="cars" id="cars"  >
